validation/linter_output_failures.txt
D:\Desktop\Part1B\GroupProject\Tango\validation\example_linter_input.R:7:3: warning: Function "print" is undesirable. As an alternative, restricted function.

  print(four)

  ^~~~~

D:\Desktop\Part1B\GroupProject\Tango\validation\example_linter_input.R:12:1: error: unexpected end of input

{

^
